src/dotnet/ReSharperPlugin.HeapView.Tests/test/data/Boxing/StructVirtualMethodInvocation03.cs
var s = new RS();
s.ToString(); // error
s.GetHashCode(); // error
s.Equals(null); // error

ref struct RS { }